--- a/frontend/providers/template/deploy/manifests/deploy.yaml.tmpl
+++ b/frontend/providers/template/deploy/manifests/deploy.yaml.tmpl
@@ -75,7 +75,7 @@ spec:
             - name: TEMPLATE_REPO_URL
               value: {{ .templateRepoUrl }}
             - name: TEMPLATE_REPO_BRANCH
-              value: {{ .templateRepoBranch }}
+              value: "main"
             - name: SHOW_AUTHOR
               value: "false"
           image: ghcr.io/labring/sealos-template-frontend:latest
