--- a/deploy/objectstorage/manifests/minio/deploy.yaml.tmpl
+++ b/deploy/objectstorage/manifests/minio/deploy.yaml.tmpl
@@ -61,11 +61,11 @@ spec:
     - name: pool-0
       resources:
         limits:
-          cpu: 1000m
-          memory: 2Gi
-        requests:
-          cpu: 100m
+          cpu: 50m
           memory: 256Mi
+        requests:
+          cpu: 5m
+          memory: 64Mi
       runtimeClassName: ''
       servers: 4
       volumeClaimTemplate:
