--- a/service/exceptionmonitor/deploy/manifests/deploy.yaml.tmpl
+++ b/service/exceptionmonitor/deploy/manifests/deploy.yaml.tmpl
@@ -28,8 +28,8 @@ spec:
               protocol: TCP
           resources:
             requests:
-              cpu: 100m
-              memory: 500M
+              cpu: 5m
+              memory: 64Mi
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
