--- a/service/devbox/deploy/manifests/deploy.yaml.tmpl
+++ b/service/devbox/deploy/manifests/deploy.yaml.tmpl
@@ -40,6 +40,7 @@ spec:
       labels:
         app: devbox-service
     spec:
+      terminationGracePeriodSeconds: 60
       containers:
         - name: devbox-service
           image: ghcr.io/labring/sealos-devbox-service:latest
